Testing build action

--- a/action.yaml
+++ b/action.yaml
@@ -12,5 +12,8 @@ description: 'Build app from dockerfile'
 runs:
   using: "composite"
   steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+      
     - run: echo "Build here"
       shell: bash
