--- a/action.yaml
+++ b/action.yaml
@@ -14,6 +14,6 @@ runs:
   steps:
     - name: Check out code
       uses: actions/checkout@v2
-      
-    - run: echo "Build here"
+
+    - run: ls
       shell: bash
