Testing build action

--- a/action.yaml
+++ b/action.yaml
@@ -1,20 +1,20 @@
-name: 'Build'
-description: 'Build app from dockerfile'
+name: 'Build Image'
+description: 'Build image from dockerfile'
 inputs:
   aws-access-key-id:  # id of input
-    description: 'AWS_ACCESS_KEY_ID'
+    description: 'AWS access key'
     required: true
   aws-secret-access-key:  # id of input
-    description: 'AWS_SECRET_ACCESS_KEY'
+    description: 'AWS secret key'
     required: true
   aws-region:  # id of input
-    description: 'aws-region'
+    description: 'AWS region'
     required: true
   ecr-repository:  # id of input
-    description: 'ecr-repository'
+    description: 'ECR repository'
     required: true
   image-tag:  # id of input
-    description: 'image-tag'
+    description: 'Image TAG'
     required: true
 outputs:
   registry:
