--- a/action.yaml
+++ b/action.yaml
@@ -16,6 +16,12 @@ inputs:
   image-tag:  # id of input
     description: 'Image TAG'
     required: true
+  pypi-user:
+    description: 'PyPi user'
+    required: true
+  python-password:
+    description: 'PyPi password'
+    required: true
 outputs:
   registry:
     description: "ECR Registry"
@@ -70,9 +76,12 @@ runs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ${{ inputs.ecr-repository }}
         IMAGE_TAG: ${{ inputs.image-tag }}
+        PYPI_USER: ${{ inputs.pypi-user }}
+        PYPI_PASSWORD: ${{ inputs.pypi-password }}
       shell: bash
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --image-scanning-configuration scanOnPush=true --repository-name $ECR_REPOSITORY
+        docker build --build-arg PYPI_USER=$PYPI_USER --build-arg PYPI_PASSWORD=$PYPI_PASSWORD -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image-repo::$ECR_REGISTRY/$ECR_REPOSITORY"
         echo "::set-output name=image-tag::$IMAGE_TAG"
