--- a/action.yaml
+++ b/action.yaml
@@ -51,6 +51,8 @@ runs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
+      with:
+          mask-password: 'false'
     
     ## Fazendo build da imagem da aplicação e armazenando no ECR
     - name: Build, tag, and push image to Amazon ECR
