--- a/action.yaml
+++ b/action.yaml
@@ -49,9 +49,10 @@ runs:
         MICROSERVICE_STATE: ${{ inputs.microservice-state }}
       shell: bash
       run: |
+        echo "Build image $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
         aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --image-scanning-configuration scanOnPush=true --repository-name $ECR_REPOSITORY
         echo "{\"Version\":\"2012-10-17\",\"Statement\":[{\"Sid\":\"allow-staging-account-pull\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::901943060028:root\"},\"Action\":[\"ecr:BatchCheckLayerAvailability\",\"ecr:BatchGetImage\",\"ecr:DescribeImages\",\"ecr:DescribeRepositories\",\"ecr:GetDownloadUrlForLayer\",\"ecr:GetLifecyclePolicy\",\"ecr:GetLifecyclePolicyPreview\",\"ecr:GetRepositoryPolicy\",\"ecr:ListImages\"]}]}" > ecr-repository-policy.json
         aws ecr set-repository-policy --repository-name $ECR_REPOSITORY --policy-text file://ecr-repository-policy.json
         docker build --build-arg PYPI_USER=$PYPI_USER --build-arg PYPI_PASSWORD=$PYPI_PASSWORD --build-arg STATE=$MICROSERVICE_STATE -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image-tag::$IMAGE_TAG"
+        echo "image-tag::$IMAGE_TAG" >> $GITHUB_OUTPUT
